--- a/Feedback.html
+++ b/Feedback.html
@@ -99,7 +99,7 @@
             width: 100%;
             padding: 10px;
             margin: 15px 0;
-            border: 1px solid #ccc;
+            border: 1px solid #e6e4e4;
             border-radius: 5px;
         }
 
